maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: not found: type int
def marqueCasesAccessibles(pos: Array[int], poids: Int) {
                                      ^